--- a/config/rbac/ovnkubeconfig_editor_role.yaml
+++ b/config/rbac/ovnkubeconfig_editor_role.yaml
@@ -1,13 +1,13 @@
-# permissions for end users to edit ovnkubeconfigs.
+# permissions for end users to edit dpuclusterconfigs.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: ovnkubeconfig-editor-role
+  name: dpuclusterconfig-editor-role
 rules:
 - apiGroups:
   - dpu.openshift.io
   resources:
-  - ovnkubeconfigs
+  - dpuclusterconfigs
   verbs:
   - create
   - delete
@@ -19,6 +19,6 @@ rules:
 - apiGroups:
   - dpu.openshift.io
   resources:
-  - ovnkubeconfigs/status
+  - dpuclusterconfigs/status
   verbs:
   - get
