--- a/config/rbac/ovnkubeconfig_viewer_role.yaml
+++ b/config/rbac/ovnkubeconfig_viewer_role.yaml
@@ -1,13 +1,13 @@
-# permissions for end users to view ovnkubeconfigs.
+# permissions for end users to view dpuclusterconfigs.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: ovnkubeconfig-viewer-role
+  name: dpuclusterconfig-viewer-role
 rules:
 - apiGroups:
   - dpu.openshift.io
   resources:
-  - ovnkubeconfigs
+  - dpuclusterconfigs
   verbs:
   - get
   - list
@@ -15,6 +15,6 @@ rules:
 - apiGroups:
   - dpu.openshift.io
   resources:
-  - ovnkubeconfigs/status
+  - dpuclusterconfigs/status
   verbs:
   - get
